Fixed review tests